--- a/src/Styles/Components/_feed.scss
+++ b/src/Styles/Components/_feed.scss
@@ -320,70 +320,83 @@
   > h1 {
     margin-bottom: 20px;
   }
-  > .contents {
-    > .title {
-      border-radius: 5px;
-      background-color: $REGULAR_RED;
-      color: $WHITE;
-      padding: 12px 18px;
-      margin-bottom: 10px;
-      > p {
-        font-family: 'Noto Sans TC';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 15px;
-        color: #FFFFFF;
-        margin-bottom: 4px;
-        line-height: 1.5;
-      }
-      > div {
-        display: flex;
-        justify-content: space-between;
-        > .userIdWithIcon {
-          > .icon {
-            width: 19px;
-            height: 19px;
+  > .feedContentCover {
+    > .contents {
+      position: relative;
+      > .title {
+        border-radius: 5px;
+        background-color: $REGULAR_RED;
+        color: $WHITE;
+        padding: 12px 18px;
+        margin-bottom: 10px;
+        > div {
+          display: flex;
+          justify-content: space-between;
+
+          > .userIdWithIcon {
+            display: flex;
+            align-items: center;
+            > .icon {
+              width: 19px;
+              height: 19px;
+            }
+            > .userId {
+              color: #7B0000;
+              font-family: 'Noto Sans TC';
+              font-style: normal;
+              font-weight: 400;
+              font-size: 13px;
+            }
           }
-          > .userId {
+          > span {
+            display: flex;
+            align-items: center;
             color: #7B0000;
             font-family: 'Noto Sans TC';
             font-style: normal;
             font-weight: 400;
             font-size: 13px;
           }
+          > p {
+            font-family: 'Noto Sans TC';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 15px;
+            color: #FFFFFF;
+            margin-bottom: 10px;
+            line-height: 1.3;
+          }
+
         }
-        > span {
-          color: #7B0000;
-          font-family: 'Noto Sans TC';
-          font-style: normal;
-          font-weight: 400;
-          font-size: 13px;
+
+        > .winnerBoard {
+          border-top: 1px solid $REGULAR_RED;
+          margin-top: 13px;
+          padding-top: 13px;
         }
       }
+      > .desc {
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 150%;
+        color: #656565;
+        border-radius: 5px;
+        border: 1px solid $LIGHT_GREY_6;
+        padding: 12px 16px;
+        margin-bottom: 10px;
 
-
-    }
-    > .desc {
-      font-family: 'Noto Sans TC';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 13px;
-      line-height: 150%;
-      color: #656565;
-      border-radius: 5px;
-      border: 1px solid $LIGHT_GREY_6;
-      padding: 12px 16px;
-      margin-bottom: 10px;
-
-      > img {
-        width: 100%;
+        > img {
+          width: 100%;
+        }
       }
     }
-  }
-  > footer {
-    > .btnCover {
-      display: flex;
-      margin-bottom: 20px;
+    > footer {
+      > .btnCover {
+        display: flex;
+        margin-bottom: 20px;
+      }
     }
   }
   > .commentCover {
@@ -422,22 +435,18 @@
      }
      > li {
        display: flex;
+       position: relative;
        flex-direction: column;
        border-bottom: 1px solid #E6E6E6;
        padding: 10px 0;
+       > .dotBtnMenuCover {
+         right: 6%;
+       }
        > .title {
          display: flex;
          justify-content: space-between;
          align-items: center;
          margin-bottom: 10px;
-         > button {
-           background-image: url("../../Assets/Images/icon/menuDotIcon.png");
-           width: 4px;
-           height: 16px;
-           background-repeat: no-repeat;
-           background-size: contain;
-           background-position: center center;
-         }
        }
        > p.contents {
          display: flex;
@@ -660,13 +669,13 @@
             width: 15%;
           }
           .winningNumCount {
-            width: 35%;
+            width: 40%;
           }
           .winnerCount {
-            width: 20%;
+            width: 17%;
           }
           .winMoney {
-            width: 30%;
+            width: 28%;
             text-align: right;
           }
         }
@@ -696,5 +705,110 @@
       margin-bottom: 40px;
       text-align: right;
     }
+  }
+}
+
+// WriteBtn.jsx
+.writeButton {
+  position: fixed;
+  bottom: 10%;
+  right: 2%;
+  width: 60px;
+  height: 60px;
+  > img {
+    width: 100%;
+  }
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+// FeedWinningWriteScreen.jsx
+// FeedWriteScreen.jsx
+.FeedWriteScreenCover {
+  padding: 10px 21px;
+  > h1 {
+    margin-bottom: 30px;
+  }
+  > .inputCover {
+    margin-bottom: 20px;
+    > .selectBox {
+        display: flex;
+        flex-direction: column;
+      > div {
+        padding: 0 4px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 10px;
+        > label {
+          width: 13%;
+          font-size: $font_MR;
+          color: $LIGHT_GREY;
+        }
+        > select {
+          border-radius: 5px;
+          border: 1px solid $LIGHT_GREY_6;
+          width: 88%;
+          padding: 6px;
+          flex-grow: 1;
+          flex-shrink: 0;
+          font-size: $font_MR;
+          color: $LIGHT_GREY;
+          font-family: Noto_Regular, sans-serif;
+        }
+      }
+    }
+  }
+  > .btnCover {
+    margin-bottom: 100px;
+    button:first-child {
+      margin-right: 10px;
+    }
+  }
+}
+
+//DotBtnMenu.jsx
+.dotBtnMenuCover {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  top: 15%;
+  right: 12%;
+  z-index: 10;
+  width: 95px;
+  height: 68px;
+  padding: 10px;
+  border-radius : 10px;
+  background-color: $DEEP_DARK_BEIGE;
+  li:last-child {
+    border-bottom: none;
+  }
+  > li {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #AC3C3C;
+    padding: 5px;
+    > button {
+      font-size: 15px;
+      color:$WHITE;
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+  }
+}
+
+//DotBtn.jsx
+ .menuBtn {
+  //width: 20px;
+  height: 15px;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  > img {
+    width: inherit;
+    height: inherit;
   }
 }
