--- a/src/Styles/Components/_myPage.scss
+++ b/src/Styles/Components/_myPage.scss
@@ -61,6 +61,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 16px 10px;
+    position: relative;
     > p {
       > strong {
         font-size: $font_RR;
