--- a/src/Styles/Components/_myCombine.scss
+++ b/src/Styles/Components/_myCombine.scss
@@ -74,7 +74,7 @@
   }
 }
 
-// Result.jsx
+// LottoMyResultScreen.jsx
 .resultCover {
   @include minScreenWidth;
   > h1 {
@@ -360,7 +360,7 @@
   }
 }
 
-// History.jsx
+// QrHistoryScreen.jsx
 .historyCover {
   @include minScreenWidth;
   > h1 {
