--- a/src/Styles/Components/_home.scss
+++ b/src/Styles/Components/_home.scss
@@ -432,7 +432,7 @@
     width: 100%;
     padding: 0 15px;
     margin-bottom: 21px;
-    > a {
+    > button {
       width: 33%;
       height: 110px;
       border-radius: 20px;
@@ -441,7 +441,6 @@
       align-items: center;
       justify-content: center;
       @include sectionBoxShadow;
-
       > .box {
         display: flex;
         flex-direction: column;
@@ -469,7 +468,6 @@
       height: 110px;
 
       @include sectionBoxShadow;
-
       .systemBox {
         display: flex;
         justify-content: center;
@@ -490,7 +488,8 @@
 .analyticsListCover {
     @include minScreenWidth;
    .titleCover {
-    margin-bottom: 35px;
+      padding: 10px 21px;
+     margin-bottom: 10px;
   }
    .btnCover {
     display: flex;
@@ -500,15 +499,26 @@
     align-items: center;
     width: 100%;
     padding:0 21px;
-    margin-bottom: 36px;
-    > a {
+    margin-bottom: 20px;
+    > button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 33%;
       margin: 0 7px;
     }
   }
-  .subBtnCover {
-    display: flex;
-  }
+}
+
+// AnalyticsCircleBtn.jsx
+.analyticsCircleBtnCover {
+  display: flex;
+  overflow-y: scroll;
+  @include scrollBarNone1;
+  @include scrollBarNone2;
+  width: 100%;
+  border-bottom: 3px solid $BG_GREY;
+  padding: 0 18px 21px 18px;
 }
 
 // PressScreen.jsx
