--- a/src/Styles/Components/_common.scss
+++ b/src/Styles/Components/_common.scss
@@ -939,3 +939,63 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
     margin-left: 5px;
   }
 }
+
+// ModalOnlyDesc.jsx
+.ModalOnlyDesc {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(52, 52, 52, 0.8);
+  position: fixed;
+  top:0;
+  left: 0;
+  z-index: 100;
+  text-align: left;
+  .box {
+    width: 90%;
+    min-height: 40vh;
+    border-radius: 10px;
+    background-color: $WHITE;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 20px;
+    .title {
+      border-bottom: 2px solid red;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding:0 10px 10px  10px;
+      h1 {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      button {
+        padding: 0;
+        img {
+          width: 20px;
+          height: auto;
+        }
+      }
+    }
+    .contents {
+      padding: 20px;
+      > li {
+        list-style: '•';
+        font-size: 18px;
+        padding:0 8px;
+        margin-bottom: 10px;
+        strong {
+          font-weight: bold;
+          line-height: 1.6;
+        }
+        p {
+          font-weight: normal;
+          line-height: 1.6;
+        }
+      }
+    }
+  }
+
+
+}
