--- a/src/Styles/Components/_home.scss
+++ b/src/Styles/Components/_home.scss
@@ -333,11 +333,11 @@
   padding: 15px 10px 5px 10px;
   border: 1px solid $LIGHT_GREY_2;
   border-radius: 10px;
-  margin: 30px 21px;
+  margin: 35px 21px;
   position: relative;
   .issue {
     position: absolute;
-    top: -23%;
+    top: -15%;
     background-color: $WHITE;
     padding: 10px;
     font-size: 15px;
@@ -365,15 +365,15 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
+     font-size: 15px;
     border-radius: 50%;
     background-color: #FFDA7C;
     color: $LIGHT_RED;
     flex-grow: 0;
     flex-shrink: 1;
-    margin-left: 12px;
-    margin-right: 2px;
+     margin: 0 2px 0 12px;
     &:before {
       content: '';
       position: absolute;
@@ -389,10 +389,18 @@
   }
   .even {
     color: $LIGHT_RED;
+    background-color: transparent;
     border: 1px solid $LIGHT_RED;
   }
   .odd {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: $NEON_BLUE;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
     border: 1px solid $NEON_BLUE;
   }
    .line{
@@ -593,7 +601,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
+    margin: 10px 0;
   }
   .rowCover {
     display: flex;
@@ -636,8 +644,347 @@
   }
 }
 
+// DistributionPerIssue.jsx
+.DistributionPerIssue {
+  > .sectionBoxCover {
+    padding: 20px 10px;
+  }
+  .issue {
+    left: 50%;
+    transform: translateX(-50%);
+    top: -20px;
+  }
+  .numBoxCover {
+    display: flex;
+    flex-wrap: wrap;
+    width: 310px;
+    align-items: center;
 
+    .numBox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 23px;
+      height: 23px;
+      background-color: $LIGHT_GREY_3;
+      color: $REGULAR_GREY;
+      margin: 4px;
+      font-size: 14px;
+    }
+    .pickNumBox {
+      background-color: $LIGHT_RED;
+      color: $WHITE;
+    }
+    .bigPickNumBox {
+      background-color: $LIGHT_YELLOW;
+      color: $LIGHT_RED;
+    }
+  }
+  .snBoxCover {
+      display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 10px;
+    > .snBox {
+      width: 23px;
+      height: 23px;
+      background-color: $LIGHT_GREY_3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $REGULAR_GREY;
+      margin: 4px;
+      font-size: 14px;
+    }
+    .pickSnBox {
+      background-color: $LIGHT_YELLOW;
+      color: $LIGHT_RED;
+    }
+  }
+}
 
+// RowBarGraph.jsx
+.chartCover {
+  position: relative;
+  margin-top: 20px;
+  .lineCover{
+    position: absolute;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+    .line {
+      width: 1px;
+      height: 2000px;
+      background-color: #C9C9C9;
+    }
+    .boldLine {
+      width: 2px;
+      height: 2000px;
+      background-color: #DEDEDE;
+    }
+  }
+  .xLabelCover {
+    position: absolute;
+    right: -5px;
+    top: -20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 10px;
+    width: 77%;
+    color: $LIGHT_GREY;
+  }
+  .rowCover {
+    display: flex;
+    .yLabelCover {
+      width: 25%;
+
+      .yLabelSubCover {
+        height: 35px;
+        display: flex;
+        align-items: center;
+      }
+      .labelCircle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 29px;
+        height: 29px;
+        border-radius: 50%;
+        background-color: $LIGHT_GREY_3;
+      }
+      .yLabelFont {
+        display: flex;
+        align-items: center;
+        height: 35px;
+        margin: 5px 0;
+        font-size: 10px;
+        color: $LIGHT_GREY;
+      }
+    }
+  }
+  .barCover {
+    width: 75%;
+  }
+  .barSubCover {
+    height: 35px;
+    display: flex;
+    align-items: center;
+
+  }
+  .bar {
+    background-color: red;
+    height: 19px;
+    max-width: 270px;
+    z-index: 10;
+    > .barNum {
+      color: $WHITE;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      height: 19px;
+      font-size: 8.5px;
+      font-weight: bold;
+      padding: 0 4px;
+    }
+  }
+}
+
+// SumNumberPerIssue.jsx
+.SumNumberPerIssue {
+  padding: 21px;
+}
+
+// SumMantissaPerIssue.jsx
+.SumMantissaPerIssue {
+  padding: 21px;
+}
+
+// FrequencyPerIssue.jsx
+.FrequencyPerIssue {
+  padding: 21px;
+  .lineCover {
+    width: 85%;
+  }
+  .chartCover .rowCover .yLabelCover {
+    width: 15%;
+  }
+  .chartCover .barCover {
+    width: 85%;
+  }
+}
+
+// ContentsTitleSection.jsx
+.ContentsTitleSection {
+  padding: 21px;
+  .subCover {
+    > .title {
+      font-size: 18px;
+      font-weight: bold;
+    }
+  }
+  .subTitleCover {
+    position: relative;
+    text-align: center;
+    .line {
+      margin: 10px 0;
+      width: 100%;
+      height: 2px;
+    }
+    .subTitle {
+      display: flex;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      font-size: 15px;
+      color: $REGULAR_GREY;
+      margin-top: 4px;
+      margin-bottom: 15px;
+    }
+  }
+  .modalBtn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    .info {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background-color: red;
+      font-size: 11px;
+      color: $WHITE;
+      font-weight: bold;
+      text-align: center;
+    }
+
+  }
+
+  .sizeCover {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    > div {
+      width: 30px;
+      height: 30px;
+      display: flex;
+      border-radius: 50%;
+      justify-content: center;
+      align-items: center;
+      margin: 0 5px;
+    }
+    .odd, .sizeSmall {
+      border: 1px solid $LIGHT_RED;
+      color: $LIGHT_RED;
+    }
+    .even, .sizeBig {
+      border: 1px solid $NEON_BLUE;
+      color: $NEON_BLUE;
+    }
+    .sizeSmall, .sizeBig {
+      padding: 0 5px;
+    }
+    .sizeSmallFont {
+      color: $LIGHT_RED;
+      font-size: 15px;
+
+    }
+    .sizeBigFont {
+      color: $NEON_BLUE;
+      font-size: 15px;
+      margin: 0 6px;
+    }
+  }
+
+  .mantissaCover {
+    .mantissaText {
+      color: $REGULAR_GREY;
+      font-size: 12px;
+      text-align: right;
+    }
+  }
+}
+
+// ColumnBarGraph.jsx
+.ColumnBarGraph {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  height: 150px;
+  margin: 20px 0;
+  .lineCover {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    height: 130px;
+    li {
+      width: 100%;
+      height: 1px;
+    }
+    .line {
+      background-color: #C9C9C9;
+    }
+    .boldLine {
+      height: 2px;
+      background-color: #DEDEDE;
+    }
+    .pointLine {
+      height: 2px;
+    }
+
+  }
+  .yLabelCover {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    justify-content: space-between;
+    align-items: center;
+    top: -5%;
+    left: 0;
+    height: 150px;
+    width: 6%;
+    font-size: 14px;
+    color: $LIGHT_GREY;
+  }
+  .xLabelCover {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    right: 0;
+    width: 90%;
+    font-size: 10px;
+    color: $LIGHT_GREY;
+    > li {
+      width: 18px;
+    }
+  }
+  .barCover {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 130px;
+    width: 90%;
+    margin: 0;
+    .bar {
+      width: 20px;
+      margin-right: 4px;
+      max-height: 150px;
+      right: 0;
+      background-color: red;
+    }
+  }
+}
 
 
 
